# NN_backprop_approximation

./: README.md  pyproject.toml
configs/: run.yaml  stage1_imitation.yaml  stage1_meta.yaml
configs/diagnostics/: default.yaml
configs/optimizers/: adamw.yaml  adamw_cosine.yaml  adamw_search.yaml  learned_hybrid.yaml  learned_hybrid_stage2.yaml  learned_hybrid_stage2_no_gating.yaml  learned_hybrid_stage2_no_temporal.yaml  learned_hybrid_stage2_no_trust.yaml  learned_hybrid_stage3_structured.yaml  learned_hybrid_stage3_vision.yaml  learned_hybrid_stage4_transformer_base.yaml  learned_hybrid_stage4_transformer_residual.yaml  sgd_momentum.yaml
configs/stage0/: fair_baseline_matrix.yaml
configs/tasks/: cnn_mnist.yaml  cnn_mnist_large.yaml  cnn_mnist_small.yaml  cnn_mnist_xlarge.yaml  quant_structured.yaml  quant_structured_large.yaml  quant_structured_small.yaml  tabular_synth.yaml
docs/: assumptions_and_open_questions.md  roadmap_stages_0_to_4.md  stage1_learned_optimizer.md  stage2_learned_optimizer.md  stage3_generalization.md  stage4_advanced_architecture.md  training_diagnostics_subsystem.md  tuning_protocol.md
scripts/: eval_diagnostics.py  eval_stage3_transfer.py  eval_stage4_ablation.py  generate_diagnostics_labels.py  run_diagnostics_pipeline.sh  run_stage0_examples.sh  run_stage0_fair_protocol.sh  run_stage1_learned_optimizer.sh  run_stage2_learned_optimizer.sh  run_stage3_transfer_eval.sh  run_stage4_ablations.sh  stage1_imitation_pretrain.py  stage1_meta_train_stub.py  summarize_stage0_results.py  train_diagnostics_model.py
src/bench/: __init__.py  (+7 more)
(+26 files in other folders)
